<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".view.main.MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:text="@string/welcome_to_cryptowallet"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_info_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="12dp"
        android:text="@string/description_initial"
        android:textColor="#9E9E9E"
        android:textScaleX="1.1"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_info_2"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tv_info_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/description_two"
        android:textColor="#FFFFFF"
        android:textScaleX="1.1"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_access"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/btn_create_new_wallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/btn_round_gray"
        android:padding="20dp"
        android:text="@string/create_new_wallet"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/btn_access"
        app:layout_constraintTop_toBottomOf="@id/tv_info_2"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/tv_or_capture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/or_capture"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_access"
        app:layout_constraintTop_toBottomOf="@id/btn_create_new_wallet"
        app:layout_constraintVertical_bias="0" />


    <Button
        android:id="@+id/btn_access"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/btn_round"
        android:padding="20dp"
        android:text="@string/access_wallet"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>